<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F2F2"
    android:foregroundTint="@color/black"
    android:textAlignment="center"
    tools:context="br.com.segundotrab.apppizza.FormularioActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/textNome"
        android:textColor="@color/black"
        android:textSize="24sp"

        app:layout_constraintEnd_toStartOf="@+id/etNome"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:background="#F4F2F2"
        android:ems="20"
        android:hint="@string/textNomeHint"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:text="@string/textEndereço"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/etEndereco"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etEndereco"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="#F4F2F2"
        android:hint="@string/textEndereçoHint"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:text="@string/textTelefone"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:background="#F4F2F2"
        android:ems="10"
        android:hint="@string/textTelefoneHint"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/etEndereco" />

    <Spinner
        android:id="@+id/spSabor"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="272dp"
        android:background="#F8F8F8"
        android:backgroundTint="#DFE0E4"
        android:entries="@array/arraySabor"
        android:foregroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefone" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="#FF0000"
        android:text="@string/btnSalvar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spSabor" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="417dp"
        android:layout_height="56dp"
        android:background="#F4F2F2"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="310dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:background="#FF0000"
        android:text="@string/toolbartxt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toTopOf="@+id/toolbar2" />

    <RadioGroup
        android:id="@+id/rgtamanho"
        android:layout_width="407dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTelefone">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="Médio"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="15dp"
            android:text="Grande"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/etTelefone" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="97dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="48dp"
            android:text="Pequena"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTelefone" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>
